--- a/app/views/organizations/index.html.haml
+++ b/app/views/organizations/index.html.haml
@@ -1,8 +1,8 @@
 =link_to("https://beyondmiles.aeroplan.com/eng/partners/11", target: "blank") do
-	%div.aeroplan-banner.banner
+	%div.aeroplan-banner
 
 %div.container
-	%div.row.donate-today
+	%div.row
 		%div.col-md-12.text-center
 			%h3
 				Your
@@ -12,26 +12,25 @@
 			=render 'layouts/donate'
 
 	%div.row
-		%div.col-md-12.text-center.donate-logos
-			%img{alt: "swb-logo", src: "https://beyondmiles.herokuapp.com/imgs/swb-logo.png"}
-			%img{alt: "swb-logo", src: "http://beyondmiles.herokuapp.com/imgs/aeroplan-logo.png"}
+		%div.col-md-12.text-center
+			%img.donate-logos{alt: "swb-logo", src: "https://beyondmiles.herokuapp.com/imgs/swb-logo.png"}
+			%img.donate-logos{alt: "swb-logo", src: "http://beyondmiles.herokuapp.com/imgs/aeroplan-logo.png"}
 
 	%hr
 
-	%div.orgs-grid
-		%div.row
-			%div.col-md-12.text-center.orgs-header
-				%h3 Click below to see your Aeroplan Miles in action.
+	%div.row
+		%div.col-md-12.text-center.orgs-header
+			%h3 Click below to see your Aeroplan Miles in action.
 
-		%div.row.seven-cols
-			-@organizations.each do |org|
-				%div.col-md-1.thumbnail.text-center#org-thumbnail
-					=link_to(org) do
-						%img.org-image.img-responsive{alt: org.name, src: org.image}
+	%div.row.seven-cols
+		-@organizations.each do |org|
+			%div.col-md-1.thumbnail.text-center#org-thumbnail
+				=link_to(org) do
+					%img.org-image.img-responsive{alt: org.name, src: org.image}
 
-					%div.org-name-hq.text-center.caption
-						=link_to(org, class: "org-name") do
-							=org.name.upcase
-						%p= org.headquarters.upcase
+				%div.org-name-hq.text-center.caption
+					=link_to(org, class: "org-name") do
+						=org.name.upcase
+					%p= org.headquarters.upcase
 
-		=render 'layouts/mailchimp'
+	=render 'layouts/mailchimp'
