--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,77 +5,11 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-$orange: #C28B2E;
-$teal: #54B2A4;
-$raleway: 'Raleway', sans-serif;
-$oswald: 'Oswald', sans-serif;
-
-.banner {
-  background-size: 100% auto;
-  background-repeat: no-repeat;
-  margin-bottom: 35px;
-}
-
-.button {
-  background-color: $teal;
-  color: #FFF;
-  border-radius: 0px;
-}
-
-p {
-  font-family: $raleway;
-  font-size: 16px;
-
-  span {
-    color: $teal;
-    font-weight: 800px;
-  }
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-.content {
-  margin-bottom: 25px
-}
-
+@import "page";
+@import "navbar";
 @import "banner";
 @import "beyondmiles";
-@import "footer";
-@import "mailchimp";
-@import "navbar";
+@import "donate";
 @import "organizations";
-
-#page-wrap {
-  margin-top: 50px;
-  font-family: $oswald;
-}
-
-@media (min-width: 767px){
-  .seven-cols .col-md-1,
-  .seven-cols .col-sm-1,
-  .seven-cols .col-lg-1  {
-    width: 100%;
-    *width: 100%;
-  }
-}
-
-@media (min-width: 992px) {
-  .seven-cols .col-md-1,
-  .seven-cols .col-sm-1,
-  .seven-cols .col-lg-1 {
-    width: 14.285714285714285714285714285714%;
-    *width: 14.285714285714285714285714285714%;
-  }
-}
-
-/* @media usage for large screens */    
-@media (min-width: 1200px) {
-  .seven-cols .col-md-1,
-  .seven-cols .col-sm-1,
-  .seven-cols .col-lg-1 {
-    width: 14.285714285714285714285714285714%;
-    *width: 14.285714285714285714285714285714%;
-  }
-}
+@import "mailchimp";
+@import "footer";
