remove haml explicit div's

--- a/app/views/beyondmiles/contact.html.haml
+++ b/app/views/beyondmiles/contact.html.haml
@@ -1,9 +1,9 @@
-%div.page-banner.text-center
+.page-banner.text-center
 	%h2 CONTACT US
 
-%div.container
-	%div.row
-		%div.content.col-md-8.col-md-offset-2.text-center
+.container
+	.row
+		.content.col-md-8.col-md-offset-2.text-center
 			%p
 				Keep in touch and come say hello!
 			%p
