--- a/app/views/layouts/_mailchimp.html.haml
+++ b/app/views/layouts/_mailchimp.html.haml
@@ -1,20 +1,20 @@
-%div.mailchimp
-	%div.row
-		%div.col-md-12.text-center
+.mailchimp
+	.row
+		.col-md-12.text-center
 			%h4 Join SWB and these 21 Partners for 21 Days of Learning in October.
 
 			-# Begin MailChimp Signup Form
-			%div#mc_embed_signup
+			#mc_embed_signup
 				%form.validate#mc-embedded-subscribe-form{action: "//swb.us2.list-manage.com/subscribe/post?u=0a19cdfa7095b44d377c0311a&amp;id=dce7740b0b", method: "post", name: "mc-embedded-subscribe-form", target: "_blank", novalidate: ""}
 				
-					%div#mc_embed_signup_scroll
-						%div.mc-field-group
+					#mc_embed_signup_scroll
+						.mc-field-group
 							%input.required.email.form-mailchimp#mce-EMAIL{type: "email", value: "", name: "EMAIL"}
 							%input.button.btn.btn-mailchimp#mc-embedded-subscribe{type: "submit", value: "SUBSCRIBE", name: "subscribe"}
 
-						%div.clear#mce-responses
-							%div.response#mce-error-response{style: "display:none"}
-							%div.response#mce-success-response{style: "display:none"}
+						.clear#mce-responses
+							.response#mce-error-response{style: "display:none"}
+							.response#mce-success-response{style: "display:none"}
 
 						%div{style: "position: absolute; left: -5000px;"}
 							%input{type: "text", name: "b_0a19cdfa7095b44d377c0311a_dce7740b0b", tabindex: "-1", value: ""}
