--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,7 +37,7 @@
 		-# End Google Tag Manager
 
 		-# FB Script
-		%div#fb-root
+		#fb-root
 		:javascript
 			(function(d, s, id) {
 			  var js, fjs = d.getElementsByTagName(s)[0];
@@ -55,7 +55,7 @@
 
 		=render 'layouts/navbar'
 
-		%div#page-wrap
+		#page-wrap
 			=yield
 
 		=render 'layouts/footer'
