--- a/app/views/beyondmiles/about.html.haml
+++ b/app/views/beyondmiles/about.html.haml
@@ -1,17 +1,17 @@
-%div.page-banner.text-center
+.page-banner.text-center
 	%h2 ABOUT LEARNING BEYOND MILES
 
-%div.container
-	%div.row.text-center
-		%div.col-md-8.col-md-offset-2
+.container
+	.row.text-center
+		.col-md-8.col-md-offset-2
 			%p
 				SWB + Aeroplan’s Beyond Miles program has been a catalyst for prolific young leaders around the world to connect face-to-face and cross-pollinate some of the most brilliant learning strategies on the planet.
 				%span The results: life-changing experiences that build a just, sustainable and thriving world.
 			%p
 				Since the launch of Beyond Miles in 2006, SWB has raised an impressive <span>12 million</span> Aeroplan<sup>®</sup> Miles and fueled over 100 projects, positively <span>impacting 20,000+ people in 50+ countries</span>. The numbers only begin to tell the story.
 
-		%div.row
-			%div.content.col-md-12
+		.row
+			.content.col-md-12
 				=link_to("https://www.facebook.com/swbca", target: "blank") do
 					%i.fa.fa-facebook.fa-2x
 				=link_to("https://twitter.com/tweetswb", target: "blank") do
@@ -19,18 +19,18 @@
 				=link_to("https://instagram.com/schoolswithoutborders", target: "blank") do
 					%i.fa.fa-instagram.fa-2x
 
-		%div.col-md-8.col-md-offset-2.hidden-xs.text-center
+		.col-md-8.col-md-offset-2.hidden-xs.text-center
 			%iframe.embed-responsive-item{src: "//player.vimeo.com/video/38347305?byline=0&amp;portrait=0&amp;color=ff9933", height: "331", width: "550", allowfullscreen: "", frameborder: "0"}
-		%div.col-md-8.col-md-offset-2.hidden-xs.text-center
+		.col-md-8.col-md-offset-2.hidden-xs.text-center
 			%a{href: "http://vimeo.com/38347305"} Make Your Miles Matter
 			from
 			%a{href: "http://vimeo.com/goldennugget"} Golden Nugget Productions
 			on
 			%a{href: "https://vimeo.com"} Vimeo
 
-		%div.col-xs-12.embed-responsive.embed-responsive-4by3.visible-xs
+		.col-xs-12.embed-responsive.embed-responsive-4by3.visible-xs
 			%iframe.embed-responsive-item{src: "//player.vimeo.com/video/38347305?byline=0&amp;portrait=0&amp;color=ff9933", height: "331", width: "550", allowfullscreen: "", frameborder: "0"}
-		%div.col-xs-12.embed-responsive.embed-responsive-4by3.visible-xs
+		.col-xs-12.embed-responsive.embed-responsive-4by3.visible-xs
 			%a{href: "http://vimeo.com/38347305"} Make Your Miles Matter
 			from
 			%a{href: "http://vimeo.com/goldennugget"} Golden Nugget Productions
